--- a/public/web/6.数组.html
+++ b/public/web/6.数组.html
@@ -14,7 +14,8 @@
     <script>
         [1,2,3].toString();//'1,2,3'
         [{id:1,c:2},{name:3,t:"dddd"}].toString();//'1,2,3'
-
+        substring
+        substr('起始位置',)
     </script>
 </body>
 </html>
