--- a/public/web/字符实体.html
+++ b/public/web/字符实体.html
@@ -6,8 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="web/居中.html">......</a>
-    <a href="websdk/index.html">websdk</a>
-    <a href="html/index.html">html</a>
+    &lt; 或 &#60; &entity_name;
+
 </body>
 </html>
