--- a/public/index.html
+++ b/public/index.html
@@ -9,5 +9,6 @@
     <a href="web/居中.html">......</a>
     <a href="websdk/index.html">websdk</a>
     <a href="html/index.html">html</a>
+    <script></script>
 </body>
 </html>
