--- a/public/web/4.随机数.html
+++ b/public/web/4.随机数.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/../css/demo.css">
+    <!-- <link rel="stylesheet" href="/../css/demo.css"> -->
 </head>
 <body>
      Math 函数</br>
@@ -45,6 +45,7 @@
     function getRandomInteger(min,max){
         return Math.floor(Math.random()*(max-min+1))+min;
     }
+    console.log(getRandomInteger(0,12))
     var a=0;
     var b=0
     for(let i=0;i<10000000;i++){
